# Highway_PLanning_Simulation

./: .gitignore  CMakeLists.txt  README.MD
doc/: c++.MD  开发记录.MD  记录.MD
doc/pic/: 2.demo1gif
doc/流程图/: 1.main函数.drawio  2.感知模块.drawio  规划模块.drawio  规划模块构成.drawio
include/: bspline_curve.h  bspline_lattice_planner.h  common.h  config.h  curve.h  debug_info.h  dp_path.h  environment.h  grid_graph.h  localization.h  matplotlibcpp.h  obstacle.h  reference_line.h  trajectory_scorer.h  visualization.h
include/math/: aabox2d.h  box2d.h  line_segment2d.h  math_common.h  polygon2d.h  vec2d.h
include/park_data_reader/: dataset.h
src/: bspline_curve.cpp  bspline_lattice_planner.cpp  dp_path.cpp  environment.cpp  grid_graph.cpp  trajectory_scorer.cpp  visualization.cpp
src/math/: aabox2d.cpp  box2d.cpp  line_segment2d.cpp  math_common.cpp  polygon2d.cpp  vec2d.cpp
src/park_data_reader/: dataset.cpp
test/: main.cpp  park_data_test.cpp  plot_test.cpp
